# retele-load-curve-exporter

./: .gitignore  Dockerfile  LICENSE  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.synology.yml
docs/: retele-aura-rd.md  synology-acceptance.md
examples/: env.example
grafana/dashboards/: dso-meter-readings.json
src/dso_common/: __init__.py
src/dso_electrica_deer/: __init__.py
src/dso_load_curves_exporter/: __main__.py  config.py  metrics.py
src/dso_retele_electrice/: __init__.py  client.py  http_client.py  http_core.py  http_session.py  models.py  parsing.py
tests/: test_http_session.py  test_metrics.py  test_parsing.py  test_polling.py  test_retele_http_client.py
tests/fixtures/retele_http_client/: aura_get_application_success.json  aura_pods_success.json  aura_pods_success_with_state.json  aura_shell_bootstrap.html  curve_samples_qe.json  curve_samples_qi.json  curve_samples_we.json  curve_samples_wi.json  login_error.json  login_frontdoor_js_redirect.html  login_page.html  login_page_visualforce_prefixed.html  login_success.json  pod_metadata.html  readings_async_visualforce.html  readings_visualforce.html  visualforce_bootstrap.html
