[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dso-load-curve-exporter"
version = "0.1.0"
description = "Reusable Romanian DSO clients and a Prometheus exporter for meter readings and load curves."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "PVT Origination"},
]
dependencies = [
  "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/d3vi1/retele-load-curve-exporter"
Repository = "https://github.com/d3vi1/retele-load-curve-exporter"
Issues = "https://github.com/d3vi1/retele-load-curve-exporter/issues"

[project.optional-dependencies]
browser = ["playwright==1.57.0"]
test = ["pytest>=8"]

[project.scripts]
dso-load-curves-exporter = "dso_load_curves_exporter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
